--- a/Scripts/spell_checker/requirements.txt
+++ b/Scripts/spell_checker/requirements.txt
@@ -4,8 +4,8 @@ certifi==2019.9.11
 chardet==3.0.4
 html2text==2019.9.26
 idna==2.8
-jamspell==0.0.11
 nltk==3.4.5
+pyaspeller==0.1.0
 requests==2.22.0
 six==1.13.0
 soupsieve==1.9.5
